---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2023-04-07
  Balance:
    - Decrease smelting times for producing ingots/molten metal from crushed/pure ores
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2023-03-13
  Bugfix:
    - Fix broken prerequisites for warp toolbelt >=2 and warp boiler 2 (now ir-coking)
  Balance:
    - Increased steam fissure starting chance to make it worth using (30% -> 85%)
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2023-02-09
  Bugfix:
    - Fix steel axe for existing saves
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2023-02-09
  Changes:
    - Enable gem spawning on resource-specific worlds
    - Enable steel-axe & warptorio axe speed tech
  Bugfix:
    - Fix fissure spawning for existing saves
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 2023-01-30
  Changes:
    - Rebalance warptorio techs with dependencies that move in IR3
    - Enable fissures, and add a chance for the starting fissure to appear
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 2023-01-27
  Changes:
    - Fix warptorio harvester dependency
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2023-01-23
  Info:
    - Initial release