@@ -1,0 +1,2 @@
+[entity-name]
+chromium-chest=Chrome chest
